--- a/docs/en/sql-reference/table-functions/s3.md
+++ b/docs/en/sql-reference/table-functions/s3.md
@@ -33,7 +33,7 @@ For GCS, substitute your HMAC key and HMAC secret where you see `aws_access_key_
   and not ~~https://storage.cloud.google.com~~.
   :::
 
-- `NOSIGN` - If this keyword is provided in place of credentials, all the requests will not be signed. 
+- `NOSIGN` - If this keyword is provided in place of credentials, all the requests will not be signed.
 - `format` — The [format](../../interfaces/formats.md#formats) of the file.
 - `structure` — Structure of the table. Format `'column1_name column1_type, column2_name column2_type, ...'`.
 - `compression` — Parameter is optional. Supported values: `none`, `gzip/gz`, `brotli/br`, `xz/LZMA`, `zstd/zst`. By default, it will autodetect compression by file extension.
@@ -200,6 +200,16 @@ FROM s3(
    'CSVWithNames'
 )
 LIMIT 5;
+```
+
+## Pre-signed URL
+
+Pre-signed URLs are currently not supported. Use `url()` table function instead:
+```sql
+SELECT *
+FROM url(
+   'https://example.amazonaws.com/f.csv?X-Amz-Security-Token=[...]'
+)
 ```
 
 ## Storage Settings {#storage-settings}
